--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<nav>
-  <div class="nav-wrapper teal">
-    <a href="#" class="brand-logo center">Application de Pokémons</a>
-  </div>
-</nav>
-
-<router-outlet></router-outlet>
+<h1> Liste de Pokemons </h1>
