Added interaction view/ctrl

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1> Liste de Pokemons </h1>
+<h1> Liste de {{title}} à {{ who }} </h1>
+
+<ul>
+  <li>Bulbizzare</li>
+  <li>Salameche</li>
+  <li>Carapuce</li>
+</ul>
+
+<button (click)="onClick()"> Cliquer Ici </button>
+<input  (keyup)="onKey($event)">
+<p>{{ value }}</p>
