--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,18 @@
 <div class="container">
   <div class="row">
     <div *ngFor="let pokemon of pokemons" class="col s6 m4">
-      <div class="card-image">
-        <img [src]="pokemon.picture">
-    </div>
-    <div class="card-stacked">
-      <div class="card-content">
-        <p><small>{{ pokemon.name }}</small></p>
+      <div class="card horizontal" (click)="selectPokemon(pokemon)" pokemonBorderCard>
+        <div class="card-image">
+          <img [src]="pokemon.picture" />
+        </div>
+        <div class="card-stacked">
+          <div class="card-content">
+            <p>
+              <small>{{ pokemon.name }}</small>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
