--- a/src/app/list-pokemon.component.html
+++ b/src/app/list-pokemon.component.html
@@ -1,19 +1,40 @@
 <h1 class="center">{{ title }} à {{ who }}</h1>
+<button class="center" (click)="createdDateFormatToggle($event)">{{ createdDateFormat === false ? "Display Date Formatted" : "Not Display Date Formatted"}}</button>
 <div class="container">
   <div class="row">
     <div *ngFor="let pokemon of pokemons" class="col s6 m4">
-      <div class="card horizontal" (click)="selectPokemon(pokemon)" pokemonBorderCard="red">
+      <div
+        class="card horizontal"
+        (click)="selectPokemon(pokemon)"
+        pokemonBorderCard="red"
+      >
         <div class="card-image">
           <img [src]="pokemon.picture" />
         </div>
         <div class="card-stacked">
           <div class="card-content">
-            <p><small>name: {{ pokemon.name }}</small></p>
+            <p>
+              <small>name: {{ pokemon.name }}</small>
+            </p>
             <!-- <p><small>id: {{ pokemon.id }}</small></p> -->
             <!-- <p><small>hp: {{ pokemon.hp }}</small></p>
             <p><small>cp: {{ pokemon.cp }}</small></p> -->
-            <p><small>created(lower): {{ pokemon.created | date | lowercase }}</small></p>
-            <p><small>created(format): {{ pokemon.created | date:"dd/MM/yyyy"}}</small></p>
+            <p>
+              <small
+                >created(lower): {{ pokemon.created | date | lowercase }}
+                <span
+                  *ngFor="let type of pokemon.types"
+                  class="{{ type | pokemonTypeColor }}"
+                  >{{ type }}</span
+                >
+              </small>
+            </p>
+            <p *ngIf="createdDateFormat">
+              <small
+                >created(format):
+                {{ pokemon.created | date: "dd/MM/yyyy" }}</small
+              >
+            </p>
           </div>
         </div>
       </div>
